# Il2CppModFramework

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  git-push-branched.bat
.github/: CODEOWNERS
GameAssembly/: CMakeLists.txt  types.natvis
GameAssembly/include/System/: Action.hpp  Array.hpp  Exception.hpp  Func.hpp  Object.hpp  String.hpp  Type.hpp  primitives.hpp
GameAssembly/include/System/Collections/Generic/: Dictionary.hpp
GameAssembly/include/System/Reflection/: MemberInfo.hpp  MethodBase.hpp  MethodInfo.hpp
GameAssembly/include/System/Threading/: WaitCallback.hpp
GameAssembly/include/UnityEngine/: Application.hpp  Behaviour.hpp  Camera.hpp  Component.hpp  GameObject.hpp  HideFlags.hpp  Input.hpp  KeyCode.hpp  LayerMask.hpp  Object.hpp  PrimitiveType.hpp  RectInt.hpp  SystemInfo.hpp  Transform.hpp  Vector2Int.hpp  Vector3Int.hpp  Vector4.hpp
GameAssembly/include/UnityEngine/Events/: UnityAction.hpp
GameAssembly/include/UnityEngine/Rendering/: CameraEvent.hpp  CommandBuffer.hpp  GraphicsDeviceType.hpp
GameAssembly/include/UnityEngine/SceneManagement/: Scene.hpp  SceneManager.hpp
GameAssembly/include/il2cpp/: Array.hpp  Assembly.hpp  Class.hpp  ClassFinder.hpp  Event.hpp  Field.hpp  Image.hpp  Method.hpp  MethodFinder.hpp  Property.hpp  Type.hpp  gc_ref.hpp  il2cpp.hpp
GameAssembly/optimized/: update_patch.cpp
GameAssembly/src/: pch.hpp
GameAssembly/src/System/: Action.cpp  Func.cpp  String.cpp
GameAssembly/src/System/Threading/: WaitCallback.cpp
GameAssembly/src/UnityEngine/Events/: UnityAction.cpp
GameAssembly/src/UnityEngine/Rendering/: CommandBuffer.cpp
GameAssembly/src/il2cpp/: Array.cpp  Assembly.cpp  Class.cpp  ClassFinder.cpp  Field.cpp  Image.cpp  Method.cpp  Type.cpp  _tmp_method_info.hpp  _weak_method_info.hpp  il2cpp.cpp  il2cpp_data.cpp  il2cpp_data.hpp  primitives.cpp
clients/: .gitignore
clients/example/: CMakeLists.txt
clients/example/src/: dllmain.cpp  pch.hpp
clients/example/src/loggers/: ConsoleLogger.cpp
clients/example/src/modules/: FPSLimiter.cpp  FileLogger.cpp  ImGuiDemo.cpp  ImGuiDumper.cpp  Loader.cpp  Test.cpp  UnityExplorer.cpp
cmake/: add_autogen.cmake  add_imgui.cmake  add_optimized.cmake  config_client.cmake  config_common.cmake  config_flags.cmake  config_mini.cmake  create_source_filters.cmake  version_to_number.cmake
common/: CMakeLists.txt
common/include/common/: CallCached.hpp  ColoredString.hpp  ConsoleLogger.hpp  ExceptionGuarded.hpp  ExitScope.hpp  FileLogger.hpp  LazyInit.hpp  LazyStatic.hpp  LockedValue.hpp  Log.hpp  Logger.hpp  LoggerManager.hpp  MemUtils.hpp  Module.hpp  ModuleManager.hpp  MyWindows.hpp  NoImplement.hpp  SEHGuarded.hpp  StringUtils.hpp  StyledString.hpp  Templates.hpp  TryGuarded.hpp  autogen.hpp  autogen_pch.hpp  simple_generator.hpp  win32_utils.hpp
common/optimized/: ImGuiHook.cpp
common/src/: CallCached.cpp  ImDrawDataCopy.hpp  ImGuiHook.cpp  ImGuiHook.hpp  Log.cpp  Logger.cpp  LoggerManager.cpp  MemUtils.cpp  Module.cpp  ModuleManager.cpp  SEHGuarded.cpp  TryGuarded.cpp  bootstrap.cpp  pch.hpp
debuggers/StackTracer/: CMakeLists.txt
debuggers/StackTracer/include/StackTracer/: StackTracer.hpp
debuggers/StackTracer/src/: StackTracer.cpp  pch.hpp
example/src/: il2cpp_config.cpp
example/src/modules/: ImGuiDumper.cpp
loaders/dll_injector/: CMakeLists.txt
loaders/dll_injector/src/: main.cpp
tools/: git-master.bat  git-prune-deleted-branches.ps1
tools/autogen/: CMakeLists.txt  ParsedResult.hpp  SimpleGenerator.cpp  SimpleParser.cpp  SimpleParser.hpp  main.cpp
